first ingredient price added in js

--- a/index.html
+++ b/index.html
@@ -26,12 +26,24 @@
                             <h2>Name Your Burger</h2>
                             <p>Ingredients</p>
                         </main>
+                        <div class="col-6">
+                            <span>Cheese</span>
+                            <input type="checkbox" id="check-cheese"
+                             class="ingredients" value="4">
+                            <label for="check-cheese">add</label>
+                        </div>
                         <div class="col-6">Cheese</div>
                         <div class="col-6">Cheese</div>
                         <div class="col-6">Cheese</div>
                         <div class="col-6">Cheese</div>
                         <div class="col-6">Cheese</div>
-                        <div class="col-6">Cheese</div>
+
+                        <div>Discount Coupon: 20june</div>
+
+                        <div><button id="sum-button">calculate</button></div>
+
+                        <div class="col-6">Price</div>
+                        <div id="total-price" class="col-6"></div>
                     </div>
                 </div>
 
