other ingredients added

--- a/index.html
+++ b/index.html
@@ -28,15 +28,34 @@
                         </main>
                         <div class="col-6">
                             <span>Cheese</span>
-                            <input type="checkbox" id="check-cheese"
-                             class="ingredients" value="4">
+                            <input type="checkbox" id="check-cheese" class="ingredients" value="4">
                             <label for="check-cheese">add</label>
                         </div>
-                        <div class="col-6">Cheese</div>
-                        <div class="col-6">Cheese</div>
-                        <div class="col-6">Cheese</div>
-                        <div class="col-6">Cheese</div>
-                        <div class="col-6">Cheese</div>
+                        <div class="col-6">
+                            <span>Tomato</span>
+                            <input type="checkbox" id="check-tomato" class="ingredients" value="4">
+                            <label for="check-tomato">add</label>
+                        </div>
+                        <div class="col-6">
+                            <span>Egg</span>
+                            <input type="checkbox" id="check-egg" class="ingredients" value="4">
+                            <label for="check-egg">add</label>
+                        </div>
+                        <div class="col-6">
+                            <span>Lettuce</span>
+                            <input type="checkbox" id="check-lettuce" class="ingredients" value="4">
+                            <label for="check-lettuce">add</label>
+                        </div>
+                        <div class="col-6">
+                            <span>Mustard</span>
+                            <input type="checkbox" id="check-mustard" class="ingredients" value="4">
+                            <label for="check-mustard">add</label>
+                        </div>
+                        <div class="col-6">
+                            <span>Ketchup</span>
+                            <input type="checkbox" id="check-ketchup" class="ingredients" value="4">
+                            <label for="check-ketchup">add</label>
+                        </div>
 
                         <div>Discount Coupon: 20june</div>
 
