Trying to apply the discount code

--- a/index.html
+++ b/index.html
@@ -48,21 +48,25 @@
                         </div>
                         <div class="col-6">
                             <span>Mustard</span>
-                            <input type="checkbox" id="check-mustard" class="ingredients" value="4">
+                            <input type="checkbox" id="check-mustard" class="ingredients" value="2">
                             <label for="check-mustard">add</label>
                         </div>
                         <div class="col-6">
                             <span>Ketchup</span>
-                            <input type="checkbox" id="check-ketchup" class="ingredients" value="4">
+                            <input type="checkbox" id="check-ketchup" class="ingredients" value="2">
                             <label for="check-ketchup">add</label>
                         </div>
 
-                        <div>Discount Coupon: 20june</div>
+                        <div>
+                            <span>Discount code</span>
+                            <input type="text" id="text-promo" placeholder="Type here..">
+                            <label for="text-promo"></label>
+                        </div>
 
                         <div><button id="sum-button">calculate</button></div>
 
                         <div class="col-6">Price</div>
-                        <div id="total-price" class="col-6"></div>
+                        <div id="total-price" class="col-6">$ 10</div>
                     </div>
                 </div>
 
