still working on discount code (almost there I feel it)

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                         <div>
                             <span>Discount code</span>
-                            <input type="text" id="text-promo" placeholder="Type here..">
+                            <input type="text" id="text-promo" value="20" placeholder="Type here..">
                             <label for="text-promo"></label>
                         </div>
 
