--- a/index.html
+++ b/index.html
@@ -7,94 +7,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Create a Burger</title>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row col-6">
+    <div class="bg-main-container">
+        <div class="container-fluid">
+            <div class="row col-6 bg-left-container">
 
-            <header class="row justify-content-between">
-                <h1 class="col-6">Create Your Burger</h1>
-                <div class="burger-img-top col-6">
-                    <img src="./img/burger-top.png" alt="Burger Image">
-                </div>
-            </header>
+                <header class="row">
+                    <h1>Create Your Burger</h1>
+                    <div class="burger-img-top">
+                        <img src="./img/burger-top.png" alt="Burger Image">
+                    </div>
+                </header>
 
-            <section>
-                <input type="text" id="burger-name" class="name-your-burger-button" placeholder="Name Your Burger">
-                <label for="burger-name"></label>
-                <p>Ingredients</p>
-            </section>
+                <section>
+                    <input type="text" id="burger-name" class="name-your-burger-button" placeholder="Name Your Burger">
+                    <label for="burger-name"></label>
+                    <p>Ingredients</p>
+                </section>
 
-            <section class="row">
-                <div class="col-6 img-container">
-                    <div class="img-box-container">
-                        <img src="./img/cheese.svg" alt="Cheese Image">
+                <section class="row">
+                    <div class="col-6 img-container">
+                        <div class="img-box-container">
+                            <img src="./img/cheese.svg" alt="Cheese Image">
+                        </div>
+                        <span>Cheese</span>
+                        <input type="checkbox" id="check-cheese" class="ingredients" value="4">
+                        <label for="check-cheese">add</label>
                     </div>
-                    <span>Cheese</span>
-                    <input type="checkbox" id="check-cheese" class="ingredients" value="4">
-                    <label for="check-cheese">add</label>
-                </div>
-                <div class="col-6 img-container">
-                    <div class="img-box-container">
-                        <img src="./img/tomato.svg" alt="Tomato Image">
+                    <div class="col-6 img-container">
+                        <div class="img-box-container">
+                            <img src="./img/tomato.svg" alt="Tomato Image">
+                        </div>
+                        <span>Tomato</span>
+                        <input type="checkbox" id="check-tomato" class="ingredients" value="4">
+                        <label for="check-tomato">add</label>
                     </div>
-                    <span>Tomato</span>
-                    <input type="checkbox" id="check-tomato" class="ingredients" value="4">
-                    <label for="check-tomato">add</label>
-                </div>
-                <div class="col-6 img-container">
-                    <div class="img-box-container">
-                        <img src="./img/fried-egg.svg" alt="Fried Egg Image">
+                    <div class="col-6 img-container">
+                        <div class="img-box-container">
+                            <img src="./img/fried-egg.svg" alt="Fried Egg Image">
+                        </div>
+                        <span>Egg</span>
+                        <input type="checkbox" id="check-egg" class="ingredients" value="4">
+                        <label for="check-egg">add</label>
                     </div>
-                    <span>Egg</span>
-                    <input type="checkbox" id="check-egg" class="ingredients" value="4">
-                    <label for="check-egg">add</label>
-                </div>
-                <div class="col-6 img-container">
-                    <div class="img-box-container">
-                        <img src="./img/lettuce.svg" alt="Lettuce Image">
+                    <div class="col-6 img-container">
+                        <div class="img-box-container">
+                            <img src="./img/lettuce.svg" alt="Lettuce Image">
+                        </div>
+                        <span>Lettuce</span>
+                        <input type="checkbox" id="check-lettuce" class="ingredients" value="4">
+                        <label for="check-lettuce">add</label>
                     </div>
-                    <span>Lettuce</span>
-                    <input type="checkbox" id="check-lettuce" class="ingredients" value="4">
-                    <label for="check-lettuce">add</label>
-                </div>
-                <div class="col-6 img-container">
-                    <div class="img-box-container">
-                        <img src="./img/mustard.svg" alt="Mustard Image">
+                    <div class="col-6 img-container">
+                        <div class="img-box-container">
+                            <img src="./img/mustard.svg" alt="Mustard Image">
+                        </div>
+                        <span>Mustard</span>
+                        <input type="checkbox" id="check-mustard" class="ingredients" value="2">
+                        <label for="check-mustard">add</label>
                     </div>
-                    <span>Mustard</span>
-                    <input type="checkbox" id="check-mustard" class="ingredients" value="2">
-                    <label for="check-mustard">add</label>
-                </div>
-                <div class="col-6 img-container">
-                    <div class="img-box-container">
-                        <img src="./img/ketchup.svg" alt="Ketchup Image">
+                    <div class="col-6 img-container">
+                        <div class="img-box-container">
+                            <img src="./img/ketchup.svg" alt="Ketchup Image">
+                        </div>
+                        <span>Ketchup</span>
+                        <input type="checkbox" id="check-ketchup" class="ingredients" value="2">
+                        <label for="check-ketchup">add</label>
                     </div>
-                    <span>Ketchup</span>
-                    <input type="checkbox" id="check-ketchup" class="ingredients" value="2">
-                    <label for="check-ketchup">add</label>
-                </div>
-            </section>
+                </section>
 
-            <section>
-                <div class="sale-code-container">
-                    <span>Discount Coupon</span>
-                    <input type="text" id="text-promo" class="sale-code" placeholder="Type here..">
-                    <label for="text-promo"></label>
-                </div>
-    
-                <div class="button-calculate">
-                    <button id="sum-button">calculate</button>
-                </div>
-            </section>
+                <section>
+                    <div class="sale-code-container">
+                        <span>Discount Coupon</span>
+                        <input type="text" id="text-promo" class="sale-code" placeholder="Type here..">
+                        <label for="text-promo"></label>
+                    </div>
 
-            <footer>
-                <div>TOTAL PRICE</div>
-                <div id="total-price">$ 10</div>
-            </footer>
+                    <div class="button-calculate">
+                        <button id="sum-button">calculate</button>
+                    </div>
+                </section>
+
+                <footer>
+                    <div>TOTAL PRICE</div>
+                    <div id="total-price">$ 10</div>
+                </footer>
+            </div>
         </div>
     </div>
 
